--- a/GameBox/GeneralClass/DriveClass/View/DriveInfoCell.xib
+++ b/GameBox/GeneralClass/DriveClass/View/DriveInfoCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="435" height="447"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="435" height="447"/>
+                <rect key="frame" x="0.0" y="0.0" width="435" height="446.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K9i-6W-k5S">
@@ -45,10 +45,10 @@
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Community_Vip" translatesAutoresizingMaskIntoConstraints="NO" id="0RA-od-kF8">
-                        <rect key="frame" x="190" y="16" width="20" height="20"/>
+                        <rect key="frame" x="190" y="12" width="22" height="28"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="0O0-4I-aSw"/>
-                            <constraint firstAttribute="height" constant="20" id="5BM-H4-gpH"/>
+                            <constraint firstAttribute="width" constant="22" id="0O0-4I-aSw"/>
+                            <constraint firstAttribute="height" constant="28" id="5BM-H4-gpH"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time labeil" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oA0-kH-DDY">
@@ -130,7 +130,7 @@
                         </state>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Community_recommend" translatesAutoresizingMaskIntoConstraints="NO" id="6pj-O0-vBf">
-                        <rect key="frame" x="309" y="16" width="50" height="40"/>
+                        <rect key="frame" x="309" y="12" width="50" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="bGz-e1-8fD"/>
                             <constraint firstAttribute="height" constant="40" id="el7-dJ-MY9"/>
@@ -165,7 +165,6 @@
                     <constraint firstItem="0RA-od-kF8" firstAttribute="leading" secondItem="Nqa-fk-W7f" secondAttribute="trailing" constant="2" id="Bvf-nW-wjv"/>
                     <constraint firstAttribute="trailing" secondItem="32R-qv-Idh" secondAttribute="trailing" id="Dbe-rX-t0t"/>
                     <constraint firstItem="Gkm-bn-Mes" firstAttribute="leading" secondItem="Ohz-9l-gov" secondAttribute="trailing" id="EvS-26-1y9"/>
-                    <constraint firstItem="0RA-od-kF8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="GC6-Pp-0io"/>
                     <constraint firstItem="4xo-hF-7ex" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="GCK-dg-4ea"/>
                     <constraint firstAttribute="trailing" secondItem="CDG-AP-aMz" secondAttribute="trailing" constant="8" id="HLs-aF-yZM"/>
                     <constraint firstAttribute="trailing" secondItem="bDt-ZM-P36" secondAttribute="trailing" id="I7G-sw-lar"/>
@@ -173,6 +172,7 @@
                     <constraint firstItem="Nqa-fk-W7f" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="7" id="M1T-ve-X0k"/>
                     <constraint firstItem="Ryn-oe-Bvd" firstAttribute="width" secondItem="Ohz-9l-gov" secondAttribute="width" id="MPp-9c-N6f"/>
                     <constraint firstItem="32R-qv-Idh" firstAttribute="centerY" secondItem="Gkm-bn-Mes" secondAttribute="centerY" id="MvM-kg-86D"/>
+                    <constraint firstItem="0RA-od-kF8" firstAttribute="centerY" secondItem="Nqa-fk-W7f" secondAttribute="centerY" id="Nu7-wp-BNJ"/>
                     <constraint firstItem="qxi-H4-Agp" firstAttribute="top" secondItem="K9i-6W-k5S" secondAttribute="bottom" constant="8" id="QG2-IC-FVu"/>
                     <constraint firstItem="4xo-hF-7ex" firstAttribute="top" secondItem="Ryn-oe-Bvd" secondAttribute="bottom" constant="4" id="Ri7-ic-S5V"/>
                     <constraint firstItem="Vh2-P2-KHO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SC8-eT-WUe"/>
@@ -229,7 +229,7 @@
         <image name="Community_Like" width="16" height="16"/>
         <image name="Community_Shared" width="11" height="16"/>
         <image name="Community_Unlike" width="16" height="16"/>
-        <image name="Community_Vip" width="13" height="13"/>
+        <image name="Community_Vip" width="23" height="28"/>
         <image name="Community_recommend" width="52" height="41"/>
         <image name="Communtiy_Comment" width="18" height="18"/>
     </resources>
