--- a/GameBox/GeneralClass/FFBusinessClass/View/FFCommodityCell.xib
+++ b/GameBox/GeneralClass/FFBusinessClass/View/FFCommodityCell.xib
@@ -6,40 +6,35 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FFCommodityCell" rowHeight="138" id="KGk-i7-Jjw" customClass="FFCommodityCell">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="700"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FFCommodityCell" id="KGk-i7-Jjw" customClass="FFCommodityCell">
+            <rect key="frame" x="0.0" y="0.0" width="386" height="323"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="699.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="386" height="322.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iHN-c7-fIw">
-                        <rect key="frame" x="16" y="11" width="343" height="680"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="700" id="aed-2U-Cup"/>
-                        </constraints>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iHN-c7-fIw">
+                        <rect key="frame" x="16" y="16" width="354" height="291"/>
                     </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="iHN-c7-fIw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="Bbu-CJ-MBP"/>
-                    <constraint firstItem="iHN-c7-fIw" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Mfm-5E-bhc"/>
-                    <constraint firstItem="iHN-c7-fIw" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="Wsk-ic-Bw7"/>
-                    <constraint firstItem="iHN-c7-fIw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="XwC-rJ-bso"/>
+                    <constraint firstItem="iHN-c7-fIw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="2iR-Vb-RYm"/>
+                    <constraint firstAttribute="bottom" secondItem="iHN-c7-fIw" secondAttribute="bottom" constant="16" id="NWu-uY-ROp"/>
+                    <constraint firstAttribute="trailing" secondItem="iHN-c7-fIw" secondAttribute="trailing" constant="16" id="dIU-Kw-KBZ"/>
+                    <constraint firstItem="iHN-c7-fIw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hLp-lf-sSY"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
-                <outlet property="imageHeight" destination="aed-2U-Cup" id="oU0-bU-6yq"/>
-                <outlet property="pimageView" destination="iHN-c7-fIw" id="dhx-8j-cof"/>
+                <outlet property="pimageView" destination="iHN-c7-fIw" id="Xa3-H1-Ijw"/>
             </connections>
-            <point key="canvasLocation" x="143.5" y="101"/>
+            <point key="canvasLocation" x="149" y="-87.5"/>
         </tableViewCell>
     </objects>
 </document>
