--- a/GameBox/Others/MyStoryboard.storyboard
+++ b/GameBox/Others/MyStoryboard.storyboard
@@ -449,7 +449,7 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sct-Ed-iWR">
-                                <rect key="frame" x="185.5" y="363" width="100" height="30"/>
+                                <rect key="frame" x="205.5" y="363" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="izC-xP-CMX"/>
                                 </constraints>
@@ -458,17 +458,17 @@
                                     <action selector="respondstToAgreementButton:" destination="Vb8-dm-uWx" eventType="touchUpInside" id="ytf-mE-frz"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6e-Lp-pz7">
-                                <rect key="frame" x="77.5" y="363" width="108" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W6e-Lp-pz7">
+                                <rect key="frame" x="57.5" y="363" width="148" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="kmV-Ge-uAA"/>
                                 </constraints>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="我已阅读并同意">
+                                <state key="normal" title="我已阅读并同意" image="Business_pay_deselect">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <state key="selected">
-                                    <color key="titleColor" red="1" green="0.1971195167" blue="0.1467297853" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="selected" image="Business_pay_select">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="respondsToAgreeButton:" destination="Vb8-dm-uWx" eventType="touchUpInside" id="lY2-7h-Hpd"/>
@@ -921,7 +921,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入SDK账号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K7F-Hb-hBG">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入将要关联的账号" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K7F-Hb-hBG">
                                 <rect key="frame" x="16" y="111.5" width="343" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="uGD-CL-96U"/>
@@ -933,7 +933,7 @@
                                     <outlet property="delegate" destination="ais-Ml-tqm" id="x0s-Bk-uEn"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入SDK账号密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hnf-WJ-iLY">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入将要关联的账号密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hnf-WJ-iLY">
                                 <rect key="frame" x="16" y="175.5" width="343" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="C0T-k4-LHq"/>
@@ -1479,11 +1479,11 @@
                                         <rect key="frame" x="0.0" y="722" width="375" height="222"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="735-eN-qi6" id="bs0-Ed-x7r">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="222"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="221.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j10-EF-OTm">
-                                                    <rect key="frame" x="0.0" y="220.5" width="375" height="0.5"/>
+                                                    <rect key="frame" x="0.0" y="221" width="375" height="0.5"/>
                                                     <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="0.5" id="nKr-rZ-N7M"/>
@@ -1496,7 +1496,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bMh-9X-bdh" customClass="FFBusinessSelectImageCollectionView">
-                                                    <rect key="frame" x="8" y="38.5" width="359" height="182"/>
+                                                    <rect key="frame" x="8" y="61.5" width="359" height="159"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="H6s-bX-FgA">
                                                         <size key="itemSize" width="50" height="50"/>
@@ -1515,16 +1515,26 @@
                                                         <action selector="respondsToSelectTradeButton:" destination="84e-4R-rjN" eventType="touchUpInside" id="OhX-HG-tJB"/>
                                                     </connections>
                                                 </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="充值订单截图（至少得包含40%以上的金额订单，可以是微信、支付宝等支付记录，不满足要求无法审核通过）" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e5e-8N-Os9">
+                                                    <rect key="frame" x="8" y="32.5" width="359" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.16078431369999999" green="0.63137254899999995" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="e5e-8N-Os9" secondAttribute="trailing" id="1Yb-hq-9mW"/>
                                                 <constraint firstAttribute="bottom" secondItem="j10-EF-OTm" secondAttribute="bottom" id="717-dc-el4"/>
                                                 <constraint firstItem="O4M-OJ-WAF" firstAttribute="leading" secondItem="bs0-Ed-x7r" secondAttribute="leadingMargin" id="83r-og-Ws8"/>
                                                 <constraint firstItem="O4M-OJ-WAF" firstAttribute="top" secondItem="bs0-Ed-x7r" secondAttribute="topMargin" id="DSI-W5-iTy"/>
                                                 <constraint firstItem="bMh-9X-bdh" firstAttribute="leading" secondItem="bs0-Ed-x7r" secondAttribute="leadingMargin" id="ESM-1V-bwm"/>
+                                                <constraint firstItem="e5e-8N-Os9" firstAttribute="leading" secondItem="bs0-Ed-x7r" secondAttribute="leadingMargin" id="Ejk-5w-mw1"/>
                                                 <constraint firstItem="j10-EF-OTm" firstAttribute="leading" secondItem="bs0-Ed-x7r" secondAttribute="leading" id="HjA-Nx-4Iz"/>
+                                                <constraint firstItem="e5e-8N-Os9" firstAttribute="top" secondItem="O4M-OJ-WAF" secondAttribute="bottom" constant="4" id="Me7-ut-ZYe"/>
                                                 <constraint firstAttribute="trailing" secondItem="AGh-iz-Cbt" secondAttribute="trailing" constant="16" id="R6L-xA-ApU"/>
-                                                <constraint firstItem="bMh-9X-bdh" firstAttribute="top" secondItem="O4M-OJ-WAF" secondAttribute="bottom" constant="10" id="WNO-r1-bE5"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="e5e-8N-Os9" secondAttribute="trailing" id="dJj-HD-B5s"/>
                                                 <constraint firstItem="AGh-iz-Cbt" firstAttribute="centerY" secondItem="O4M-OJ-WAF" secondAttribute="centerY" id="doD-7W-2ED"/>
+                                                <constraint firstItem="bMh-9X-bdh" firstAttribute="top" secondItem="e5e-8N-Os9" secondAttribute="bottom" id="kLM-gr-pyF"/>
                                                 <constraint firstItem="bMh-9X-bdh" firstAttribute="trailing" secondItem="bs0-Ed-x7r" secondAttribute="trailingMargin" id="m2v-AS-MYs"/>
                                                 <constraint firstItem="j10-EF-OTm" firstAttribute="top" secondItem="bMh-9X-bdh" secondAttribute="bottom" id="odQ-fv-exy"/>
                                                 <constraint firstAttribute="trailing" secondItem="j10-EF-OTm" secondAttribute="trailing" id="xkU-SY-iaW"/>
@@ -1535,7 +1545,7 @@
                                         <rect key="frame" x="0.0" y="944" width="375" height="160"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Tyx-s4-Ke5" id="B57-Pg-GB0">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Oo-4R-aTk">
@@ -1855,7 +1865,7 @@
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2. 交易过程中无需单行账号密码被找回, 185平台将会担保账号安全." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yb-vV-UdL">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2. 交易过程中无需担心账号密码被找回, 185平台将会担保账号安全." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3yb-vV-UdL">
                                                     <rect key="frame" x="16" y="90.5" width="343" height="33.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
